--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "incenteev/composer-parameter-handler": "^2.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "4.8.*",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
